<resources>
    <string name="app_name">project</string>
    <string name="start">Start</string>
    <string name="juego">JUEGO</string>
    <string name="todo">TODO</string>
    <string name="_1_1">1-1</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="_1_3">1-3</string>
    <string name="_1_4">1-4</string>
    <string name="_1_2">1-2</string>
    <string name="_1_5">1-5</string>
    <string name="_1_8">1-8</string>
    <string name="_1_7">1-7</string>
    <string name="_1_6">1-6</string>
    <string name="board">board</string>
    <string name="reglas">REGLAS:</string>
    <string name="rules">1Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>