<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/board">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo6"
            android:rotation="20"
            android:rotationY="186"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo"
            android:rotation="20"
            android:rotationY="-182"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo7"
            android:rotation="21"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo3"
            android:rotation="21"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo5"
            android:rotation="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.374"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo4"
            android:rotation="20"
            android:rotationY="-182"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo2"
            android:rotation="20"
            android:rotationY="186"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            app:srcCompat="@drawable/postit" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="154dp"
            android:layout_height="85dp"
            android:contentDescription="@string/todo"
            android:rotation="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.374"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            app:srcCompat="@drawable/postit" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="60dp"
            android:text="@string/_1_1"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:layout_constraintVertical_bias="0.621" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_2"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.621" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_3"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_8"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView16"
            app:layout_constraintEnd_toEndOf="@+id/imageView16"
            app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toTopOf="@+id/imageView16"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_5"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            app:layout_constraintHorizontal_bias="0.575"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_6"
            android:textColor="#5D4037"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toStartOf="@+id/imageView15"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView14"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_7"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView15"
            app:layout_constraintEnd_toStartOf="@+id/imageView16"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView15"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_4"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.621" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>